Fixing search bar and header on mobile

--- a/app/assets/stylesheets/media-queries.css
+++ b/app/assets/stylesheets/media-queries.css
@@ -659,7 +659,7 @@ html {
 #menu ul {
     margin-bottom: 0;
     margin-top: 0;
-    text-align: right;
+    text-align: center;
 }
 
 .featured-list li a {
