--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1038,7 +1038,7 @@ button.button:hover {
 
 .content-box{
   padding: 3em 0;
-  min-height: 700px;
+  min-height: 600px;
   box-sizing: border-box;
 }
 
